@@ -2160,6 +2160,7 @@ WIDGET_DEFAULT = {
         "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding": 0.5,
+        "display_orientation": 0,
         "display_detail_level": 1,
         "area_size": 400,
         "area_margin": 40,
