@@ -1,5 +1,10 @@
 WIP
 -----------------------------
+* Track map Widget
+  - Add "display_orientation" option (requested by user "peterkasbergen" and "lucamilan87"), which sets track map display orientation in degrees.
+    For example, a "270" value will rotate map by "270" degrees clockwise. Default value is "0", which always displays track map "north up" in game's coordinate system.
+  - Improved "display_detail_level" calculation to work with smaller maps.
+
 * Misc
   - Fixed an issue that would add time increment on pitout prediction (Track map Widget) while outside pit lane.
 
